<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/wedSymbol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@android:color/primary_text_dark"
            android:gravity="end"
            android:text="+"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/wedDegrees"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:gravity="center"
            android:text="22"
            android:textColor="@android:color/primary_text_dark"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/wedC"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:textColor="@android:color/primary_text_dark"
            android:gravity="center"
            android:text="@string/C"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/wedAtmPhenomena"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:gravity="center"
            android:text="@string/weather_cloudy"
            android:textColor="@android:color/primary_text_dark"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/wed_pressure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:gravity="center"
            android:text="760"
            android:textColor="@android:color/primary_text_dark"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/wed_mm_Hg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@android:color/primary_text_dark"
            android:text="@string/mm_hg"
            android:textSize="25sp" />
    </LinearLayout>
</LinearLayout>