<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:id = "@+id/main_activity"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sunny_clear"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/city_name_btn"
        android:layout_width="wrap_content"
        android:layout_height="38dp"
        android:alpha="0.9"
        android:background="@android:color/transparent"
        android:onClick="onClickCitySelectionButton"
        android:text="@string/select_city"
        android:textColor="@android:color/primary_text_dark"
        android:textSize="18sp"
        android:textStyle="italic"
        app:layout_constraintBaseline_toBaselineOf="@+id/city_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/city_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="0.9"
        android:background="@android:color/transparent"
        android:fontFamily="sans-serif-medium"
        android:text="@string/moscow"
        android:textColor="@android:color/primary_text_dark"
        android:textSize="24sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.515"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/time_in"
        android:layout_width="72dp"
        android:layout_height="29dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/time_in"
        android:textColor="@android:color/primary_text_dark"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />


    <TextView
        android:id="@+id/city_name_for_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginBottom="20dp"
        android:text="@string/moscow"
        android:textColor="@android:color/primary_text_dark"
        app:layout_constraintBaseline_toBaselineOf="@id/time_in"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/time_in"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/time"
        android:layout_width="95dp"
        android:layout_height="42dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="20dp"
        android:text="@string/_20_45"
        android:textColor="@android:color/primary_text_dark"
        android:textSize="35sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/atmospheric_phenomena"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:alpha="0.9"
        android:text="@string/weather_clear"
        android:textColor="@android:color/primary_text_dark"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.388"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/temperature" />

    <TextView
        android:id="@+id/mon_pressure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="22dp"
        android:alpha="0.9"
        android:text="@string/pressure"
        android:textColor="@android:color/primary_text_dark"
        android:textSize="15sp"
        app:layout_constraintStart_toEndOf="@+id/atmospheric_phenomena"
        app:layout_constraintTop_toBottomOf="@+id/temperature" />

    <TextView
        android:id="@+id/symbol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="0.9"
        android:text="@string/plus"
        android:textColor="@android:color/primary_text_dark"
        android:textSize="70sp"
        app:layout_constraintBottom_toTopOf="@+id/time_in"
        app:layout_constraintEnd_toStartOf="@+id/temperature"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.275" />

    <TextView
        android:id="@+id/temperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:alpha="0.9"
        android:text="@string/_23"
        android:textColor="@android:color/primary_text_dark"
        android:textSize="70sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/city_name"
        app:layout_constraintVertical_bias="0.207" />

    <TextView
        android:id="@+id/celsius"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:alpha="0.9"
        android:text="@string/C"
        android:textColor="@android:color/primary_text_dark"
        android:textSize="70sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/temperature"
        app:layout_constraintTop_toBottomOf="@+id/city_name"
        app:layout_constraintVertical_bias="0.207" />

    <TextView
        android:id="@+id/mm_Hg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:layout_marginTop="22dp"
        android:text="@string/mm_hg"
        android:alpha="0.9"
        android:textColor="@android:color/primary_text_dark"
        app:layout_constraintBaseline_toBaselineOf="@id/mon_pressure"
        app:layout_constraintStart_toEndOf="@+id/mon_pressure"
        app:layout_constraintTop_toBottomOf="@+id/temperature" />

    <Button
        android:id="@+id/sundayBtn"
        android:layout_width="52dp"
        android:layout_height="40dp"
        android:background="@android:color/transparent"
        android:onClick="onClickSun"
        android:text="Sun"
        android:textColor="@android:color/primary_text_dark"
        android:textSize="12sp"
        app:layout_constraintEnd_toStartOf="@+id/mondayBtn"
        app:layout_constraintTop_toTopOf="@+id/mondayBtn" />

    <Button
        android:id="@+id/mondayBtn"
        android:layout_width="52dp"
        android:layout_height="40dp"
        android:background="@android:color/transparent"
        android:onClick="onClickMon"
        android:text="Mon"
        android:textColor="@android:color/primary_text_dark"
        android:textSize="12sp"
        app:layout_constraintEnd_toStartOf="@+id/tuesdayBtn"
        app:layout_constraintTop_toTopOf="@+id/tuesdayBtn" />

    <Button
        android:id="@+id/tuesdayBtn"
        android:layout_width="52dp"
        android:layout_height="40dp"
        android:background="@android:color/transparent"
        android:onClick="onClickTue"
        android:text="Tue"
        android:textColor="@android:color/primary_text_dark"
        android:textSize="12sp"
        app:layout_constraintEnd_toStartOf="@+id/wednesdayBtn"
        app:layout_constraintTop_toTopOf="@+id/wednesdayBtn" />

    <Button
        android:id="@+id/wednesdayBtn"
        android:layout_width="52dp"
        android:layout_height="40dp"
        android:background="@android:color/transparent"
        android:onClick="onClickWed"
        android:text="Wed"
        android:textColor="@android:color/primary_text_dark"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/atmospheric_phenomena"
        app:layout_constraintVertical_bias="0.241" />

    <Button
        android:id="@+id/thursdayBtn"
        android:layout_width="52dp"
        android:layout_height="40dp"
        android:background="@android:color/transparent"
        android:onClick="onClickThu"
        android:text="Thu"
        android:textColor="@android:color/primary_text_dark"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/wednesdayBtn"
        app:layout_constraintTop_toTopOf="@+id/wednesdayBtn" />

    <Button
        android:id="@+id/fridayBtn"
        android:layout_width="52dp"
        android:layout_height="40dp"
        android:background="@android:color/transparent"
        android:onClick="onClickFri"
        android:text="Fri"
        android:textColor="@android:color/primary_text_dark"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/thursdayBtn"
        app:layout_constraintTop_toTopOf="@+id/thursdayBtn" />

    <Button
        android:id="@+id/saturdayBtn"
        android:layout_width="52dp"
        android:layout_height="40dp"
        android:background="@android:color/transparent"
        android:onClick="onClickSat"
        android:text="Sat"
        android:textColor="@android:color/primary_text_dark"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/fridayBtn"
        app:layout_constraintTop_toTopOf="@+id/fridayBtn" />

    <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:text="22.07.2019"
        android:textColor="@android:color/primary_text_dark"
        android:alpha="0.9"
        app:layout_constraintBaseline_toBaselineOf="@id/city_name"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/day_of_the_week"
        android:name="com.example.weatherapp.SundayFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wednesdayBtn" />

</androidx.constraintlayout.widget.ConstraintLayout>